[gd_scene load_steps=4 format=3 uid="uid://h0mla4ufbgir"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_0urly"]
[ext_resource type="Texture2D" uid="uid://cv4b781oovecl" path="res://art/ball.svg" id="1_80pv6"]
[ext_resource type="FontFile" uid="uid://catrrf8p3prki" path="res://fonts/Potato Chips.otf" id="2_wnial"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0urly")

[node name="Lifes" type="Node2D" parent="."]

[node name="Life1" type="Sprite2D" parent="Lifes"]
position = Vector2(37, 29)
texture = ExtResource("1_80pv6")

[node name="Life2" type="Sprite2D" parent="Lifes"]
position = Vector2(53, 29)
texture = ExtResource("1_80pv6")

[node name="Life3" type="Sprite2D" parent="Lifes"]
position = Vector2(69, 29)
texture = ExtResource("1_80pv6")

[node name="Score" type="Label" parent="."]
offset_left = 139.0
offset_right = 337.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_wnial")
theme_override_font_sizes/font_size = 46
text = "Tiempo  0:59"
horizontal_alignment = 1

[node name="Record" type="Label" parent="."]
offset_left = 387.0
offset_top = 5.0
offset_right = 454.0
offset_bottom = 57.0
text = "Record
- -"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
offset_left = 22.0
offset_top = 452.0
offset_right = 460.0
offset_bottom = 540.0
theme_override_fonts/font = ExtResource("2_wnial")
theme_override_font_sizes/font_size = 60
text = "MESSAGE"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 181.0
offset_top = 571.0
offset_right = 303.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("2_wnial")
theme_override_font_sizes/font_size = 40
text = "Jugar"

[node name="GameTime" type="Timer" parent="."]

[node name="Level" type="Label" parent="."]
offset_left = 79.0
offset_top = 36.0
offset_right = 396.0
offset_bottom = 71.0
theme_override_fonts/font = ExtResource("2_wnial")
theme_override_font_sizes/font_size = 35
text = "Nivel 1"
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="GameTime" to="." method="_on_game_time_timeout"]
